--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,13 @@
 <body>
   <div class="container">
     <h1>Проверка заказа</h1>
+    <div class="test">
+      <form id="test_form">
+        <button class="test_button">
+          Отправка тестового заказа
+        </button>
+    </form>
+    </div>
     <form id="order_form">
       <input type="text" id="order_id" name="id" placeholder="Enter Order ID" required>
       <button type="submit">Поиск</button>
